# DKL-GP

./: INSTALL  README.md
datasets/elevators/test/: x.csv  y.csv
datasets/elevators/train/: x.csv  y.csv
experiments/: data_gen.py  example_1D.ipynb  experiment_1D.py  main.py  n_nonzero_vs_rho_n.py  setups.yaml
viva/: pyproject.toml  setup.py
viva/viva/: Ancestor.py  CRPS.py  Laplace_init.py  MM_order.py  VIVA_class_cpp.py  VIVA_class_py.py  __init__.py  ichol0_wrap.py  interval_score.py  kernel.py  log_score.py  predict.py  sp_fwd_solve.py  utils.py
